# oxyboard

./: .gitignore  .kateproject  Cargo.toml  Dockerfile  README.md  run-with-podman.sh
config/: Oxyboard.toml  Rocket.toml  oxyboard.toml
scripts/: inject.sh  inject_1024.sh
src/: history.rs  history_recorder.rs  history_state.rs  lib.rs  main.rs  message.rs  post.rs
src/config/: data.rs  default.rs  loader.rs  mod.rs  toml.rs  toml_cfg.rs
src/core/: history.rs  mod.rs  post.rs  recorder.rs
src/requests/: about.rs  backend.rs  board.rs  clients_config.rs  default.rs  headers.rs  index.rs  mod.rs  post.rs  template_engine.rs  templates.rs
src/storage/: backend.rs  engine.rs  file_csv.rs  mod.rs
src_iron/: main.rs
src_iron/config/: default.rs  loader.rs
src_iron/core/: history.rs  recorder.rs
src_iron/requests/: about.rs  backend.rs  clconfig.rs  default.rs  headers.rs  post.rs
src_iron/storage/: backend.rs
static/css/: board.css  main.css
static/js/: board.js
templates/: about.html.hbs  about.html.mustache  backend.xml.hbs  backend.xml.mustache  board.html.hbs  board.html.mustache  board.mustache.html  clconfig.html.mustache  clients_config.html.hbs  head_inc.html.mustache  header.html.hbs  header_inc.html.mustache  layout.html.hbs  navbar.html.hbs  navbar_inc.html.mustache
