[package]
name    = "oxyboard"
version = "0.1.0"
authors = [ "Olivier Serve <tifauv@gmail.com>" ]

[dependencies]
clap            = "2.29.1"
csv             = "1.0.0-beta.5"
iron            = "0.6.0"
mount           = "0.4.0"
mustache        = "0.9.0"
persistent      = "0.4.0"
router          = "0.6.0"
rustc-serialize = "0.3.19"
serde			= "1.0"
serde_derive    = "1.0"
time            = "0.1.39"
toml            = "0.4.5"
urlencoded      = "0.6.0"

[dependencies.hyper]
version = "0.10"
default-features = false

[[bin]]
name = "oxyboard"
doc  = false
