[package]
name = "oxyboard"
version = "0.2.0"
edition = "2018"
authors = [ "Olivier Serve <tifauv@gmail.com>" ]

[dependencies]
clap         = "2.23"
csv          = "1.1"
rocket       = "0.5.0-rc.1"
serde        = "1.0"
serde_derive = "1.0"
time         = { version = "0.3", features = [ "formatting", "local-offset" ] }
toml         = "0.5"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["handlebars"]
